--- a/ecommerce/src/Components/Navbar.css
+++ b/ecommerce/src/Components/Navbar.css
@@ -25,6 +25,7 @@
     .logo-container{
         width : 100px ;
         height: 30px ;
+        margin-left : 0px ;
     }
     .input-field{
         display: none;
