--- a/admin/src/Component/Topbar/Topbar.css
+++ b/admin/src/Component/Topbar/Topbar.css
@@ -1,12 +1,15 @@
 .topbar{
     width : 100% ;
-    height : 150px ;
+    height : 120px ;
     background-color : #EFEFEF;
+    position : sticky ;
+    top : 0 ;
+    z-index : 999 ;
 }
 
 .topbar-wrapper{
     height : 100% ;
-    padding : 0px 20px ;
+    padding : 0px 40px ;
     display : flex ;
     align-items : center ;
     justify-content: space-between;
@@ -23,3 +26,37 @@
     object-fit: cover
 }
 
+.topbarIconContainer{
+    position : relative ;
+    margin : 05px ;
+}
+
+.topIconBadge{
+    width : 22px ;
+    height : 22px ;
+    border-radius: 50% ;
+    display: flex ;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600 ;
+    background-color : red ;
+    position : absolute ;
+    top : -5px ;
+    right : -5px ;
+    color : white ;
+}
+
+.top-right{
+    display : flex ;
+    flex-direction: row ;
+}
+
+.avatar{
+    width : 50px ;
+    height : 50px ;
+    border-radius: 50% ;
+    background : url("https://images.pexels.com/photos/762020/pexels-photo-762020.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") ;
+    background-size : cover ;
+    background-repeat : no-repeat ;
+    background-position: center;
+}
