--- a/admin/src/Component/Chart/Chart.css
+++ b/admin/src/Component/Chart/Chart.css
@@ -1,5 +1,15 @@
 .chart-container{
-    border : 1px solid black ;
-    margin: 20px;
+    margin: 30px;
     padding: 20px;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    border-radius: 10px ;
+}
+
+.chartTitle{
+    font-size : 28px ;
+    color : rgba(6, 0, 14, 0.76) ;
+    font-family: 'Fira Sans', sans-serif;
+    padding : 10px ;
 }
