--- a/admin/src/Component/Pages/UserPage.css
+++ b/admin/src/Component/Pages/UserPage.css
@@ -1,3 +1,27 @@
 .userList{
     flex : 4 ;
 }
+
+.statusonline{
+    width : 30px ;
+    height : 30px ;
+    border-radius: 50%;
+    display : flex ;
+    align-items : center ;
+    justify-content : center ;
+    background-color : rgba(108, 214, 108 , 0.7) ;
+    color :rgba(0, 68, 0, 1) ;
+    font-size : 12px ;
+}
+
+.statusoffline{
+    width : 30px ;
+    height : 30px ;
+    border-radius: 50%;
+    display : flex ;
+    align-items : center ;
+    justify-content : center ;
+    background-color : rgba(240, 97, 97, 0.7) ;
+    color :rgb(92, 0, 0) ;
+    font-size : 12px ;
+}
