--- a/admin/src/Component/Pages/UserPage.css
+++ b/admin/src/Component/Pages/UserPage.css
@@ -1,27 +1,48 @@
 .userList{
     flex : 4 ;
+    display : flex ;
+    flex-direction : column ;
 }
 
-.statusonline{
+.data-grid-container{
+    width : 100% ;
+    height : 90% ;
+    margin : auto ;
+}
+
+.status{
     width : 30px ;
     height : 30px ;
     border-radius: 50%;
     display : flex ;
     align-items : center ;
     justify-content : center ;
+    font-size : 12px ;
+}
+
+.status.online{
     background-color : rgba(108, 214, 108 , 0.7) ;
     color :rgba(0, 68, 0, 1) ;
-    font-size : 12px ;
+    
 }
 
-.statusoffline{
-    width : 30px ;
-    height : 30px ;
-    border-radius: 50%;
-    display : flex ;
-    align-items : center ;
-    justify-content : center ;
+.status.offline{
     background-color : rgba(240, 97, 97, 0.7) ;
     color :rgb(92, 0, 0) ;
-    font-size : 12px ;
+}
+
+.edit-button{
+    width : 60px ;
+    height : 30px ;
+    font-size: 14px ;
+    border: none ;
+    margin-right : 7px ;
+}
+
+.title{
+    font-size : 28px ;
+    color : rgba(6, 0, 14, 0.76) ;
+    font-family: 'Fira Sans', sans-serif;
+    margin-bottom : 10px ;
+    margin : 5px ;
 }
