--- a/admin/src/Component/Pages/SingleUser.css
+++ b/admin/src/Component/Pages/SingleUser.css
@@ -1,3 +1,80 @@
 .singleUserWrapper{
-    flex : 4
+    flex : 4 ;
+    padding : 20px ;
+}
+
+.edit{
+    display: flex ;
+    flex-direction: row;
+    
+}
+
+.title{
+    font-size : 28px ;
+    color : rgba(6, 0, 14, 0.76) ;
+    font-family: 'Fira Sans', sans-serif;
+    margin : 30px ;
+} 
+
+.end-result-wrapper{
+    flex : 1 ;
+    padding : 20px ;
+    margin :  30px ;
+    border-radius: 10px;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    display : flex ;
+    flex-direction: column ;
+
+}
+
+.edit-wrapper{
+    flex :2 ;
+    padding : 20px ;
+    margin :  30px ;
+    border-radius: 10px;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+}
+
+.heading{
+    display : flex ;
+    flex-direction: row ,;
+}
+
+.member-info{
+    flex : 3 ;
+    display : flex ;
+    justify-content : center ;
+    flex-direction: column ;
+    padding : 10px ;
+}
+.name-info{
+    font-size : 24px ;
+    font-family: 'Fira Sans', sans-serif;
+    color : rgba(6, 0, 14, 0.76) ;
+    margin-bottom : 10px ;
+}
+
+.role-info{
+    font-size : 18px ;
+    font-family: 'Fira Sans', sans-serif;
+    color : rgba(32, 32, 32, 0.76) ;
+}
+
+.subtitle{
+    margin : 10px 0px 0px 10px ;
+    font-size : 22px ;
+    font-family: 'Fira Sans', sans-serif;
+    color :rgba(37, 37, 37, 0.76) ;
+}
+
+.row{
+    display : flex ;
+    flex-direction : row ;
+    font-size : 18px ;
+    align-items: center;
+    margin-bottom: 5px;
 }
