--- a/admin/src/Component/Pages/SingleUser.css
+++ b/admin/src/Component/Pages/SingleUser.css
@@ -34,6 +34,8 @@
     padding : 20px ;
     margin :  30px ;
     border-radius: 10px;
+    display : flex ;
+    flex-direction : row ;
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
@@ -77,4 +79,49 @@
     font-size : 18px ;
     align-items: center;
     margin-bottom: 5px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border :none ;
+    border-bottom : 1px solid rgba(22, 0, 41, 0.76) ;
+}
+
+.image-edit{
+    flex : 2 ;
+    display: flex;
+    flex-direction: column;
+}
+
+.biggerImage{
+    flex : 1 ;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+}
+
+.button-container{
+    flex : 2 ;
+    display: flex;
+    align-items: flex-end;
+}
+.update-button{
+    width : 70% ;
+    border-radius: 5px ;
+    padding: 5px 25px ;
+    font-size : 16px ;
+    font-family: 'Fira Sans', sans-serif;
+    border : none ;
+    background-color : #6e64b9 ;
+    color : #fdfdfd ;
+    cursor: pointer ;
+}
+
+.update-button:hover{
+    color: #6e64b9;
+    background-color: #fdfdfd;
+    border : 2px solid #6e64b9 ;
 }
