Add new user form

--- a/admin/src/Component/Pages/NewUser.css
+++ b/admin/src/Component/Pages/NewUser.css
@@ -1,3 +1,45 @@
 .new-user-wrapper{
     flex : 4 ;
+    padding-top : 30px ;
+}
+
+.title{
+    font-size : 28px ;
+    color : rgba(6, 0, 14, 0.76) ;
+    font-family: 'Fira Sans', sans-serif;
+    margin : 30px ;
+}
+
+.new-user-form{
+    width : 80% ;
+    margin : 30px 0 0 30px ;
+    padding : 15px ;
+    border-radius: 10px ;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    display : flex ;
+}
+
+.col{
+    width : 45% ;
+    float : left ;
+    margin : 10px ;
+}
+
+.form-label{
+    border : none ;
+    font-family: 'Fira Sans', sans-serif;
+    font-size : 18px ;
+}
+
+.form-input{
+    border : 1px solid rgba(119, 111, 134, 0.56) !important;
+    border-radius: 10px ;
+    font-family: 'Fira Sans', sans-serif;
+    font-size : 16px ;
+}
+
+.form-input:active, .form-input:focus{
+    border : 1px solid rgba(134, 114, 111, 0.56) !important;
 }
