--- a/admin/src/Component/Pages/NewUser.css
+++ b/admin/src/Component/Pages/NewUser.css
@@ -18,14 +18,24 @@
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    display : flex ;
+    display: flex ;
 }
 
 .col{
     width : 45% ;
     float : left ;
     margin : 10px ;
+    display: flex ;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.col-2{
+    width : 45% ;
+    float : left ;
+    margin : 10px;
+}
+
 
 .form-label{
     border : none ;
@@ -42,4 +52,65 @@
 
 .form-input:active, .form-input:focus{
     border : 1px solid rgba(134, 114, 111, 0.56) !important;
+}
+
+.drag-drop-img-container{
+    margin-top : 10px ;
+    width : 100% ;
+    padding : 15px 0;
+    border-radius: 10px ;
+    border-style: dotted;
+    border-color:  rgba(119, 111, 134, 0.56) ;
+    display: flex ;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.cloud-icon{
+    color : #38316b ;
+}
+
+.form-text{
+    font-family: 'Fira Sans', sans-serif;
+    font-size : 18px ;
+}
+
+.img-button{
+    margin-top : 15px ;
+    padding : 5px 10px ;
+    font-size : 16px ;
+    font-family: 'Fira Sans', sans-serif;
+    border : none ;
+    background-color : #6e64b9 ;
+    border : 2px solid #6e64b9 ;
+    color : #fdfdfd ;
+    cursor: pointer ;
+}
+
+.img-button:hover,.img-button:active{
+    background-color : #fdfdfd ;
+    color : #6e64b9 ;
+    cursor: pointer ;
+    border : 2px solid #6e64b9 ;
+}
+
+.create-button{
+    padding : 10px ;
+    font-size : 16px ;
+    font-family: 'Fira Sans', sans-serif;
+    border : none ;
+    background-color : #6e64b9 ;
+    border : 2px solid #6e64b9 ;
+    color : #ffffff ;
+    cursor: pointer ;
+    width : 35% ;
+    margin-top : 10% ;
+    border-radius: 10px ;;
+}
+
+.create-button:hover{
+    color: #6e64b9;
+    background-color: #fdfdfd;
+    border : 2px solid #6e64b9 ;
 }
