--- a/admin/src/Component/TeamMember/TeamMember.css
+++ b/admin/src/Component/TeamMember/TeamMember.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction : column ;
     margin-right : 30px ;
-    padding : 20px ;
+    padding : 0 10px ;
 }
 
 .title{
