--- a/admin/src/Component/Transactions/Transactions.css
+++ b/admin/src/Component/Transactions/Transactions.css
@@ -4,7 +4,7 @@
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     border-radius: 10px;
-    padding : 0 10px ;
+    padding : 0 10px 10px 10px ;
 
     display: flex;
     flex-direction : column ;
