--- a/admin/src/Component/Pages/Product.css
+++ b/admin/src/Component/Pages/Product.css
@@ -1,18 +1,40 @@
 .product-container{
     flex : 4 ;
+    display : flex ;
+    flex-direction : column ;
 }
 
 .product-info-container{
+    flex : 3 ;
     display : flex ;
     flex-direction: row;
 }
 
+.second-row-container{
+    flex : 2 ;
+    display : flex ;
+    flex-direction : row ;
+    margin : 030px ;
+}
+
+.age-distribution{
+    flex : 1 ;
+    display : flex ;
+    flex-direction : column ;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    border-radius: 10px;
+    margin-right : 30px ;
+    padding: 20px;
+}
 
 .product-info{
     flex : 1 ;
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    border-radius: 10px;
     margin : 30px ;
     padding: 30px;
     
@@ -23,8 +45,9 @@
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    
+    border-radius: 10px ;
     margin : 30px ;
+    padding : 30px ;
 }
 
 .body-container{
