--- a/admin/src/Component/Pages/Product.css
+++ b/admin/src/Component/Pages/Product.css
@@ -21,12 +21,25 @@
     flex : 1 ;
     display : flex ;
     flex-direction : column ;
+    align-items: center;
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     border-radius: 10px;
     margin-right : 30px ;
     padding: 20px;
+}
+
+.top-selling-chart{
+    flex : 2 ;
+    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .product-info{
