--- a/admin/src/Component/Pages/Product.css
+++ b/admin/src/Component/Pages/Product.css
@@ -37,6 +37,7 @@
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     border-radius: 10px;
     padding: 20px;
+    margin-left : 30px ;
     display: flex;
     flex-direction: column;
     align-items: center;
