--- a/admin/src/Component/Pages/Product.css
+++ b/admin/src/Component/Pages/Product.css
@@ -14,14 +14,10 @@
     flex : 2 ;
     display : flex ;
     flex-direction : row ;
-    margin : 030px ;
+    margin : 30px ;
 }
 
-.age-distribution{
-    flex : 1 ;
-    display : flex ;
-    flex-direction : column ;
-    align-items: center;
+.calendar, .age-distribution , .branch-contribution, .top-selling-chart, .product-info, .sales-performance{
     -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
     box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
@@ -30,13 +26,24 @@
     padding: 20px;
 }
 
+.calendar{
+    flex : 1 ;
+}
+
+.age-distribution{
+    flex : 1 ;
+    display : flex ;
+    flex-direction : column ;
+    align-items: center;
+    
+}
+
+.branch-contribution{
+    flex : 2 ;
+}
+
 .top-selling-chart{
     flex : 2 ;
-    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    border-radius: 10px;
-    padding: 20px;
     margin-left : 30px ;
     display: flex;
     flex-direction: column;
@@ -45,10 +52,6 @@
 
 .product-info{
     flex : 1 ;
-    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    border-radius: 10px;
     margin : 30px ;
     padding: 30px;
     
@@ -56,10 +59,6 @@
 
 .sales-performance{
     flex : 2;
-    -webkit-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    -moz-box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    box-shadow: -1px 2px 16px -6px rgba(17,1,38,0.76);
-    border-radius: 10px ;
     margin : 30px ;
     padding : 30px ;
 }
