--- a/admin/src/Component/Pages/UserPage.css
+++ b/admin/src/Component/Pages/UserPage.css
@@ -11,7 +11,7 @@
 }
 
 .title-warpper{
-    width : 80% ;
+    width : 95% ;
     display : flex ;
     justify-content: space-between ;
     align-items: center ;
@@ -26,6 +26,7 @@
     color : #fdfdfd ;
     cursor: pointer ;
     border-radius: 5px;
+    padding : 5px ;
 }
 
 .add-new-button:hover{
